--- a/app.html
+++ b/app.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en"
-    dir="ltr">
+ dir="ltr">
 
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible"
-		    content="IE=edge">
+		 content="IE=edge">
 		<title>Page Title</title>
 		<meta name="viewport"
-		    content="width=device-width, initial-scale=1">
-
+		 content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet"
-		    type="text/css"
-		    href="assets/css/loading-bar.css">
+		 href="assets/css/normalize.css">
 		<link rel="stylesheet"
-		    href="assets/css/animate.min.css">
-			<link rel="stylesheet"
-			    href="assets/css/app.css">
+		 type="text/css"
+		 href="assets/css/loading-bar.css">
+		<link rel="stylesheet"
+		 href="assets/css/animate.min.css">
+		<link rel="stylesheet"
+		 href="assets/css/app.css">
 
 		<script src="assets/js/loading-bar.js"></script>
 		<script src="assets/js/jquery-3.3.1.min.js"></script>
 		<script src="https://cdn.streamlabs.com/slobs-platform/lib/streamlabs-platform.min.js"></script>
 
 		<script type="module"
-		    src="app/app.js"></script>
+		 src="app/app.js"></script>
 
 	</head>
 
