--- a/app.html
+++ b/app.html
@@ -6,21 +6,17 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible"
 		 content="IE=edge">
-		<title>Page Title</title>
+		<title>SLOBS Widget</title>
 		<meta name="viewport"
 		 content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet"
 		 href="assets/css/normalize.css">
 		<link rel="stylesheet"
-		 type="text/css"
-		 href="assets/css/loading-bar.css">
-		<link rel="stylesheet"
 		 href="assets/css/animate.min.css">
 		<link rel="stylesheet"
 		 href="assets/css/app.css">
 
-		<script src="assets/js/loading-bar.js"></script>
 		<script src="assets/js/jquery-3.3.1.min.js"></script>
 		<script src="https://cdn.streamlabs.com/slobs-platform/lib/streamlabs-platform.min.js"></script>
 
@@ -30,7 +26,7 @@
 	</head>
 
 	<body>
-
+		<div id="app-container"></div>
 	</body>
 
 </html>
